<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="imperial_units">"imperial units(°F, mPh,...)"</string>
  <string name="weather_map">"weather map"</string>
  <string name="select_location">"select a location"</string>
  <string name="no_location_desc">"You haven\'t chosen a location yet. \nYou can search to use your GPS location"</string>
  <string name="about">"about"</string>
  <string name="review_application">"review application"</string>
  <string name="share_application">"share application"</string>
  <string name="third_parties">"third party libraries"</string>
  <string name="source_code">"source code"</string>
  <string name="version">"version"</string>
  <string name="gps_location">"find GPS location"</string>
  <string name="missing_location_perm">"location permission is missing"</string>
  <string name="search_location">"search location"</string>
  <string name="my_location">"my location"</string>
  <string name="no_location_set">"no location set"</string>
  <string name="search">"search"</string>
  <string name="api_key">"api key"</string>
  <string name="about_to_quit">"the app is about to close because it does not have an API Key"</string>
  <string name="description_required">"a description is required"</string>
  <string name="description">"description"</string>
  <string name="loading">"loading"</string>
  <string name="expires">"expires"</string>
  <string name="search_city">"search"</string>
  <string name="last_updated">"last updated"</string>
  <string name="moon">"moon"</string>
  <string name="preferences">"preferences"</string>
  <string name="select_on_map">"select on a map"</string>
  <string name="climal_cell_api_key_optional_description">"to get minutely weather data(optional) a free ClimaCell API key is required. To remain under the free plan each user should create its own API key. You can do that by creating an account on their website"</string>
  <string name="api_key_required_description">"to get weather data from OpenWeatherMap, a free API key is required. \nThe application distributes one by default, however to stay under the free plan, each user must create their own API key.\n\nYou can do this by creating an account on their website."</string>
  <string name="owm_api_key">"OpenWeatherMap API Key"</string>
  <string name="cc_api_key">"ClimaCell API Key"</string>
  <string name="quit">"quit"</string>
  <string name="open_website">"open website"</string>
  <string name="api_key_required">"API key required"</string>
  <string name="animations">"animations"</string>
  <string name="refresh">"refresh"</string>
  <string name="select">"select"</string>
  <string name="no_network">"no network"</string>
  <string name="error">"error"</string>
  <string name="authorize">"authorize"</string>
  <string name="ok">"OK"</string>
  <string name="non_valid_email">"non valid email"</string>
  <string name="email">"email"</string>
  <string name="email_required">"a valid email is required"</string>
  <string name="send_bug_report_desc">"enter a mail and a description for the encountered error"</string>
  <string name="send">"send"</string>
  <string name="file">"file"</string>
  <string name="close">"close"</string>
  <string name="cancel">"cancel"</string>
  <string name="name">"name"</string>
  <string name="bug_report_sent">"bug report sent"</string>
  <string name="please_describe_error">"please describe error"</string>
  <string name="send_bug_report">"send bug report"</string>
  <string name="gps_not_authorized">"please enable GPS and authorize OSS Weather to use it to determine your location"</string>
  <string name="gps_not_enabled">"please enable GPS to allow OSS Weather to determine your location"</string>
  <string name="theme.black">"black"</string>
  <string name="theme.dark">"dark"</string>
  <string name="theme.light">"light"</string>
  <string name="theme.auto">"auto"</string>
  <string name="theme.title">"theme"</string>
  <string name="language">"language"</string>
  <string name="french">"french"</string>
  <string name="english">"english"</string>
  <string name="settings.title">"settings"</string>
  <string name="app_name">"OSS Weather"</string>
  <string name="title_activity_kimera">"OSS Weather"</string>
</resources>
