<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ListPreference
        app:entries="@array/langs"
        app:entryValues="@array/langsValues"
        app:key="language"
        app:title="@string/language" />
    <PreferenceCategory app:title="@string/settings.title">
        <EditTextPreference
        app:key="owmApiKey"
        app:summary="@string/api_key_required_description"
        app:title="@string/owm_api_key"/>
        <EditTextPreference
        app:key="ccApiKey"
        app:summary="@string/climal_cell_api_key_optional_description"
        app:title="@string/cc_api_key"/>
        <ListPreference
        app:defaultValue="dark"
        app:entries="@array/themes"
        app:entryValues="@array/themesValues"
        app:key="theme"
        app:title="@string/theme.title" />
        <SwitchPreference
        app:defaultValue="false"
        app:key="animations"
        app:title="@string/animations" />

    </PreferenceCategory>
</PreferenceScreen>
